PharmaDemo/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountPlanogram__c</fullName>
        <label>AccountPlanogram</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>Name  &amp; &quot; &quot; &amp;  BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Calls</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beds__c</fullName>
        <label>Beds</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Time_Today__c</fullName>
        <formula>IF(CONTAINS(TEXT(Best_Time__c), Day_of_Week__c) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Time Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Time__c</fullName>
        <label>Best Time</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrickId__c</fullName>
        <formula>IF ( RecordTypeId = &quot;012j0000000bXwn&quot;, Id , Brick__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrickId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brick_Name__c</fullName>
        <formula>IF ( RecordTypeId = &quot;012j0000000bXwn&quot;, Name , IF( IsPersonAccount, Person_Account_Brick_Name__c, Brick__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brick Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brick__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brick</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brick</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>Bricks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,FFFFFF&amp;chd=t:&quot; &amp; TEXT(pc_Target_Calls__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <summaryForeignKey>Location__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE(MOD(TODAY() - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Type__c</fullName>
        <label>Department Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gynaecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haematology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopaedics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dispensing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispensing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Parent_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?lid=null&amp;aid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__AGeoCode?id=&quot; &amp; Id,&quot;Locate Account&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Google Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Which_Address__c</fullName>
        <label>Mapping Address</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ITBrelViz__Hover_Details__c</fullName>
        <formula>&quot;Type: &quot; &amp; TEXT(Type) &amp; &quot;\nAccount Number: &quot; &amp; AccountNumber &amp; &quot;\nCountry: &quot; &amp; BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hover Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Report_Date__c</fullName>
        <label>Last Call Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Size__c</fullName>
        <label>List Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppValue__c</fullName>
        <label>Open Opportunity Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>notEqual</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Template</label>
        <referenceTo>Order_Template__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Account_Brick_Name__c</fullName>
        <label>Person Account Brick Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product1_Sales__c</fullName>
        <label>Product 1 Sales</label>
        <summarizedField>Sales__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales__c.Product_Name__c</field>
            <operation>equals</operation>
            <value>Product 1</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales__c.Brick__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product2_Sales__c</fullName>
        <label>Product 2 Sales</label>
        <summarizedField>Sales__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales__c.Product_Name__c</field>
            <operation>equals</operation>
            <value>Product 2</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales__c.Brick__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product3_Sales__c</fullName>
        <label>Product 3 Sales</label>
        <summarizedField>Sales__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales__c.Product_Name__c</field>
            <operation>equals</operation>
            <value>Product 3</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales__c.Brick__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_1_Brick_Sales__c</fullName>
        <formula>Brick__r.Product1_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product 1 Brick Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_2_Brick_Sales__c</fullName>
        <formula>Brick__r.Product2_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product 2 Brick Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_3_Brick_Sales__c</fullName>
        <formula>Brick__r.Product3_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product 3 Brick Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relationship_Indicator__c</fullName>
        <formula>IMAGE(  CASE(Relationship__c,  &quot;Indifferent&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;Interested&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;Friend&quot;, &quot;/img/samples/stars_300.gif&quot;,  &quot;Partner&quot;, &quot;/img/samples/stars_400.gif&quot;,   &quot;/img/samples/stars_000.gif&quot;),  &quot;Relationship&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Indifferent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Calls__c</fullName>
        <formula>IF(ISPICKVAL(Target__c, &quot;High&quot;),24, 
IF(ISPICKVAL(Target__c, &quot;Medium&quot;),12, 
IF(ISPICKVAL(Target__c, &quot;Low&quot;),8, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wherevantage__WhereVantage_Geocoding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This gives details for the address match</description>
        <label>Address Match Details</label>
        <referenceTo>Wherevantage__WVGeocoding__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Type__c</fullName>
        <label>Wholesaler Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Not All In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Won_Opportunities__c</fullName>
        <label>Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pc_Target_Calls__c</fullName>
        <formula>IF (Target_Calls__c &gt; 0, ROUND( (Actual_Calls__c   / Target_Calls__c) * 100, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Target Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveOrganisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>All Active Organisations</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Best_Times_Today</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Brick__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>Best_Time_Today__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Best Times Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bricks</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Brick</value>
        </filters>
        <label>Bricks</label>
        <language>en_US</language>
        <sharedTo>
            <group>BigMarkets</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hospitals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Beds__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>contains</operation>
            <value>hosp</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Hospitals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTerritory2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Customers_week</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Brick__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>My Customers to be seen this week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_NotSeenRecent_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Brick__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Customers (Not Seen Recently)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_NotSeen_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Brick__c</columns>
        <columns>Call_Indicator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Customers (Not Seen)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Target_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Brick__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Target__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>My Target Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sugeries</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Brick__c</columns>
        <columns>Call_Indicator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>contains</operation>
            <value>surg</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>notEqual</operation>
        </filters>
        <label>Surgeries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Wholesalers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Wholesaler</value>
        </filters>
        <label>Wholesalers</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Brick</fullName>
        <active>true</active>
        <description>Used to capture details about Bricks</description>
        <label>Brick</label>
    </recordTypes>
    <recordTypes>
        <fullName>Department</fullName>
        <active>true</active>
        <label>Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organisation</fullName>
        <active>true</active>
        <description>Used to capture details for Organisations</description>
        <label>Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wholesaler</fullName>
        <active>true</active>
        <label>Wholesaler</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>